# img2mask

./: LICENSE  README.md  requirements-dev.txt  setup.cfg
src/img2mask/: __init__.py  convertor.py
tests/: performance.py  tests_convertor.py
