[metadata]
name = img2mask
version = 0.0.1
author = Petr Dvoracek
author_email = pedro.dvoracek@gmail.com
description = img2mask allows you to easily convert segmentation mask label from 3-channel RGB representation (image) to N-channel representation (mask) where N is number of classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PetrDvoracek/img2mask
project_urls =
    Bug Tracker = https://github.com/PetrDvoracek/img2mask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src